fix history overflow

--- a/src/app/features/history/history.component.scss
+++ b/src/app/features/history/history.component.scss
@@ -28,7 +28,7 @@
   gap: 5px;
 
   .qr-link {
-    width: 200px;
+    width: 190px;
     display: inline-block;
     text-decoration: none;
     color: black;
